--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6">
+<!-- <div class="col-md-6">
 	<%= form_tag do %>
 	<fieldset>
 		<legend> Contact us </legend>
@@ -20,4 +20,11 @@
 		</table>
 	</fieldset>
 	<% end %>
+</div> -->
+<div class="container">
+	<div class="jumbotron">
+		<h3 class="text-center">
+			Kami sedang bekerja keras untuk mengisi konten halaman ini
+		</h3>
+	</div>
 </div>
