--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,8 @@
 <div class="depot_form">
-	<fieldset>
-		<legend> <%= t('.legend') %> </legend>
-		<%= render 'form' %>
-	</fieldset>
+	<div class="col-md-6 col-md-offset-3">
+		<fieldset>
+			<legend> <%= t('.legend') %> </legend>
+			<%= render 'form' %>
+		</fieldset>
+	</div>
 </div>
