--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Signup") %>
-<fieldset>
+<div class="col-md-6 col-md-offset-3">
 	<legend> Sign Up </legend>
 	<%= render 'form' %>
-</fieldset>
+</div>
 
