--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,7 @@
 							<li> <%= link_to 'Orders', orders_path %> </li>
 							<li> <%= link_to 'Products', products_path %> </li>
 							<li> <%= link_to 'All Users', users_path %> </li>
+							<li>  <%= link_to "Category", categories_path %> </a> </li>
 						<% end %>			
 					<% else %>
 						<li>  <%= link_to t('.questions'), question_path %> </li>
