--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :description, input_html: {rows: '10'} %>
     <%= f.input :image_url %>
     <%= f.input :price %>
+    <%= f.association :category, label: "Product category" %>
     <%= f.button :submit, :class => "btn btn-success" %>
 
 <% end %>
