adding show method in store controller

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
 	<ul>
 		<li> <%= link_to t('.questions'), question_path %>  </li>
 		<li> <%= link_to t('.news'), news_path %> </a> </li>
-		<li> <a href="#"> <%= t('.contact') %> </a> </li>
+		<li> <%= link_to t('.contact'), contact_path %> </li>
 	</ul>
 	<ul>
 		<li> 
