--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,57 +1,65 @@
-	<header class="navbar navbar-fixed-top">
-		<div class="container">
+	<!-- Static navbar -->
+      <header class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <%= link_to "AB OnlineShop", store_path, id: "logo" %>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              	<% if current_user %>
+					<% if current_user.admin? %>
+						<li> <%= link_to 'Orders', orders_path %> </li>
+						<li> <%= link_to 'Products', products_path %> </li>
+						<li> <%= link_to 'All Users', users_path %> </li>
+						<li>  <%= link_to "Category", categories_path %> </a> </li>
+					<% end %>			
+				<% else %>
+					<li>  <%= link_to t('.questions'), question_path %> </li>
+					<li>  <%= link_to t('.news'), news_path %> </li>
+					<li>  <%= link_to t('.contact'), contact_path %> </a> </li>
+				<% end %>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              	<% if @cart %>
+				<li>
+					<a href="#" data-toggle="modal" data-target=".bd-example-modal-lg" id="my-cart">
+						<b>
+							<span class="glyphicon glyphicon-shopping-cart"></span>
+							My Cart <span class="label label-success" id="cart-badge">
+								<%= cart_quantity(@cart.line_items)%> 									
+							</span>
+						</b>
+					</a>
+				</li>
+				<% end %>
+				
+				<% if current_user %>
+					<li> <%= link_to "Profile", user_path(current_user) %> </li>	
+					<li> <%= link_to "Logout", logout_path, method: :delete %> </li>
+				<% else %>
+					<li> <%= link_to "Login", login_path %> </li>
+					<li> <%= link_to "Signup", new_user_path %> </li>
+				<% end %>
+				<!-- form for i18n -->
+				<li>
+					<%= form_tag store_path, class: 'locale' do %>
+						<%= select_tag 'set_locale', options_for_select(LANGUAGES, I18n.locale.to_s), onchange: 'this.form.submit()'%>
+						<%= submit_tag 'submit' %>
+						<%= javascript_tag "$('.locale input').hide()" %>
+					<% end %>						
+				</li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </header>
 
-			<%= link_to "AB OnlineShop", store_path, id: "logo" %>
-			<nav>
-				<ul class="nav navbar-nav">
-					<% if current_user %>
-						<% if current_user.admin? %>
-							<li> <%= link_to 'Orders', orders_path %> </li>
-							<li> <%= link_to 'Products', products_path %> </li>
-							<li> <%= link_to 'All Users', users_path %> </li>
-							<li>  <%= link_to "Category", categories_path %> </a> </li>
-						<% end %>			
-					<% else %>
-						<li>  <%= link_to t('.questions'), question_path %> </li>
-						<li>  <%= link_to t('.news'), news_path %> </li>
-						<li>  <%= link_to t('.contact'), contact_path %> </a> </li>
-					<% end %>
-				</ul>								
-				<ul class="nav navbar-nav navbar-right">
-						<% if @cart %>
-						<li>
-							<a href="#" data-toggle="modal" data-target=".bd-example-modal-lg" id="my-cart">
-								<b>
-									<span class="glyphicon glyphicon-shopping-cart"></span>
-									My Cart <span class="label label-success" id="cart-badge">
-										<%= cart_quantity(@cart.line_items)%> 									
-									</span>
-								</b>
-							</a>
-						</li>
-						<% end %>
-						
-					<% if current_user %>
-						<li> <%= link_to "Profile", user_path(current_user) %> </li>	
-						<li> <%= link_to "Logout", logout_path, method: :delete %> </li>
-					<% else %>
-						<li> <%= link_to "Login", login_path %> </li>
-						<li> <%= link_to "Signup", new_user_path %> </li>
-					<% end %>
-					<!-- form for i18n -->
-					<li>
-						<%= form_tag store_path, class: 'locale' do %>
-							<%= select_tag 'set_locale', options_for_select(LANGUAGES, I18n.locale.to_s), onchange: 'this.form.submit()'%>
-							<%= submit_tag 'submit' %>
-							<%= javascript_tag "$('.locale input').hide()" %>
-						<% end %>						
-					</li>
-				</ul>
-			</nav>			
-		</div>
-	</header>
-
-	<!-- modal target -->
+ 	<!-- modal target -->
 	<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 	  	<div class="modal-dialog modal-md">
 	  		<div class="modal-content">
