adding favicon and making email view better

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
 	  <title><%= title(yield(:title)) %></title>
 	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= favicon_link_tag '10210164_ace854c2-7145-408d-bffa-97af582182ed.ico' %>
 	  <%= csrf_meta_tags %>
-	  <%= favicon_link_tag 'Ruby.ico' %>
 	</head>
 	<%= render "layouts/header" %>
 	<body class="<%= controller.controller_name %>">
