--- a/app/views/order_notifier/received.html.erb
+++ b/app/views/order_notifier/received.html.erb
@@ -1,7 +1,7 @@
 <div class="header" style="background-color: #cc0000;">
-	<h1 style="padding: 5px; color: white;"> Dear <%= (@order.name).downcase.titleize %> </h1>
+	<h1 style="padding: 5px; color: white;"> Hai <%= (@order.name).downcase.titleize %>!</h1>
 
-	<h2 style="padding: 5px; color: white;">Terima kasih sudah berbelanja di AB OnlineShop!</h2>
+	<h2 style="padding: 5px; color: white;">Terima kasih sudah berbelanja di AB OnlineShop</h2>
 </div>
 <div class="body" style="background-color: #f4f4f4; color: black; padding: 5px;">
 	<h3>Barang yang anda pesan adalah sebagai berikut:</h3>
@@ -35,28 +35,35 @@
 		</table>
 		<table>
 		<tr>
-			<th colspan="3"><h2 style="text-align: left;"> Silahkan melakukan pelunasan dengan transfer ke akun bank kami di bawah ini:</h2></th>
+			<th colspan="4"><h2 style="text-align: left;"> Silahkan melakukan pelunasan dengan transfer ke akun bank kami di bawah ini:</h2></th>
 		</tr>
-		<tr>
+		<tr style="background-color: white;">
+			<td style="padding: 5px;"> 
+				<img src="http://res.cloudinary.com/ab-technology/image/upload/v1508158502/1200px-BankNegaraIndonesia46-logo.svg_mgxprd.png" style="height: 50; width: 50px;">
+			</td>
 			<td style="padding: 5px;"> <h3> Bank Negara Indonesia (BNI) </h3> </td>
 			<td style="padding: 5px;""> <h3> 034 281 1454 </h3> </td>
 			<td style="padding: 5px;"> <h3> Musa Abdillah </h3> </td>
 		</tr>
-		<tr>
+		<tr style="background-color: white;">			
+			<td style="padding: 5px;"> 
+				<img src="http://res.cloudinary.com/ab-technology/image/upload/v1508158503/Bank_Mandiri_Logo_b11ces.png" style="height: 50; width: 50px;">
+			</td>
 			<td style="padding: 5px;"> <h3> Bank Mandiri </h3> </td>
 			<td style="padding: 5px;"> <h3> 139 00 1686 5366 </h3> </td>
 			<td style="padding: 5px;"> <h3> Musa Abdillah </h3> </td>
 		</tr>
 		<tr>
-			<td colspan="3">
+			<td colspan="4">
 				<h4>
 					Kami tunggu pelunasan pembayaran sampai 
-					<strong><%= (24.hours.from_now).strftime("%A, %d %B %Y at %I:%M%p") %></strong>
+					<strong><%= (24.hours.from_now).strftime("%A, %d %B %Y at %I:%M%p") %></strong><br>
+					Jangan lupa konfirmasi setelah melakukan pembayaran dengan mengirim email ke musaabdillahm9@gmail.com atau cukup dengan mengirim sms ke 0858 8371 8464.
 				</h4>
 			</td>
 		</tr>
 		<tr>		
-			<td colspan="3"> <h4> Terima kasih sudah berbelanja di AB OnlineShop!</h4></td>
+			<td colspan="4"> <h4> Terima kasih sudah berbelanja di AB OnlineShop!</h4></td>
 		</tr>
 	</table>
 </div>
