fixing text on email

--- a/app/views/order_notifier/received.html.erb
+++ b/app/views/order_notifier/received.html.erb
@@ -57,7 +57,7 @@
 			<td colspan="4">
 				<h4>
 					Kami tunggu pelunasan pembayaran sampai 
-					<strong><%= (24.hours.from_now).strftime("%A, %d %B %Y at %I:%M%p") %></strong><br>
+					<strong><%= (24.hours.from_now).strftime("%d %B %Y pukul %I:%M %p") %></strong><br>
 					Jangan lupa konfirmasi setelah melakukan pembayaran dengan mengirim email ke musaabdillahm9@gmail.com atau cukup dengan mengirim sms ke 0858 8371 8464.
 				</h4>
 			</td>
