--- a/app/views/static_pages/question.html.erb
+++ b/app/views/static_pages/question.html.erb
@@ -4,10 +4,10 @@
 	<li><b> Apakah ini web resmi AB OnlineShop?</b>
 		<ol> Ya benar ini web resmi AB OnlineShop.</ol>
 	</li>
-	<li><b> Apakah jenis pengiriman yang di dukung website ini?</b>
-			<ol>Pengiriman yang di dukung yaitu pengiriman via go jek by go send</ol>
+	<li><b> Apakah jenis pengiriman yang di dukung AB OnlineShop?</b>
+			<ol>Pengiriman yang di dukung yaitu pengiriman dengan go jek by go send</ol>
 	</li>
-	<li><b> Daerah mana saja yang bisa menggunakan jasa pengiriman via go jek by go send untuk membeli produk di AB OnlineShop?</b>
+	<li><b> Daerah mana saja yang bisa menggunakan jasa pengiriman dengan go jek by go send untuk membeli produk di AB OnlineShop?</b>
 			<ol>Untuk daerah yang di dukung adalah wilayah Jakarta, Bogor, Tangerang, Bekasi, Depok (JABODETABEK)</ol>
 	</li>
 	<li><b>
@@ -22,11 +22,11 @@
 			<li>Silahkan pilih barang yang di inginkan kemudian klik add to cart</li>
 			<li>Barang yang sudah di masukkan ke cart akan muncul di sebelah kiri layar</li>
 			<li>Klik tombol Checkout untuk melanjutkan atau klik empty jika ingin mengosongkan cart</li>
-			<li>Selanjutnya akan ada data pengisian untuk pengiriman barang, silahkan di isi data ini dengan se detail mungkin,terutama <u><b>pengisian alamat email dan pengisian alamat harus mencakup nama provinsi, kota/kabupaten, kecamatan/kelurahan, nama jalan, nomor rumah serta kode pos</b></u></li>
-			<li>Jika data sudah lengkap silahkan kli Create order</li>
-			<li>Sistem kami akan mengirimkan tagihan ke alamat email yang sudah di isikan sebelumnya, tagihan mencakup total keseluruhan yang harus di bayar yaitu harga produk dan ongkos kirim via gojek (Rp 15.000)</li>
+			<li>Selanjutnya akan ada data pengisian untuk pengiriman barang, silahkan di isi data ini dengan se detail mungkin,terutama <u><b>pengisian alamat harus mencakup nama provinsi, kota/kabupaten, kecamatan/kelurahan, nama jalan, nomor rumah serta kode pos</b></u></li>
+			<li>Jika data sudah lengkap silahkan klik Selesaikan Transaksi</li>
+			<li>Sistem kami akan mengirimkan tagihan ke alamat email anda, tagihan mencakup total keseluruhan yang harus di bayar yaitu harga produk dan ongkos kirim dengan gojek (Rp 15.000)</li>
 			<li>Silahkan lakukan pelunasan ke rekening kami yang sudah tertera di email tagihan</li>
-			<li>Setelah melakukan pelunasan silakan kofirmasi ke alamat email kami musaabdillahm9@gmail.com</li>
+			<li>Setelah melakukan pelunasan silakan kofirmasi ke alamat email kami musaabdillahm9@gmail.com atau sms ke nomor 0858 8371 8464</li>
 			<li>Konfirmasi kami terima barang akan kami siapkan untuk segera di kirim </li>
 
 		</ol>
@@ -38,7 +38,7 @@
 		<ol>Bank Mandiri <img src="https://pendaftaran.budiluhur.ac.id/img/thumbs/mandirilogo.jpg" class="img-rounded" alt="Mandiri" width="75" height="25"> </ol>
 	</li>
 	<li><b>
-		Dalam data pengiriman saya harus mengisi Payment Type itu bagaimana maksudnya?</b>
+		Dalam data pengiriman saya harus mengisi Pilih cara pembayaran itu bagaimana maksudnya?</b>
 		<ol> Kami memiliki dua jenis rekening yaitu Bank Negara Indonesia(BNI) dan Bank Mandiri, silahkan pilih akan di kirim ke mana pelunasan transaki yang di buat.</ol>
 	</li>
 </ol>
