--- a/app/views/static_pages/question.html.erb
+++ b/app/views/static_pages/question.html.erb
@@ -20,7 +20,7 @@
 			Untuk bertransaksi atau membeli barang di AB OnlineShop bisa di ikuti langkah langkah sebagai berikut:
 			<li>Daftar/Signup terlebih dahulu dengan cara klik link <%= link_to "Signup", new_user_path, class: "btn btn-danger" %> di pojok atas website kami, jika sudah punya akun silahkan klik <%= link_to "Login", login_path, class: "btn btn-success" %> tidak perlu mendaftar lagi</li>
 			<li>Silahkan pilih barang yang di inginkan kemudian klik add to cart</li>
-			<li>Barang yang sudah di masukkan ke cart akan muncul di sebelah kiri layar</li>
+			<li>Barang yang sudah di masukkan ke cart akan muncul di simbol keranjang</li>
 			<li>Klik tombol Checkout untuk melanjutkan atau klik empty jika ingin mengosongkan cart</li>
 			<li>Selanjutnya akan ada data pengisian untuk pengiriman barang, silahkan di isi data ini dengan se detail mungkin,terutama <u><b>pengisian alamat harus mencakup nama provinsi, kota/kabupaten, kecamatan/kelurahan, nama jalan, nomor rumah serta kode pos</b></u></li>
 			<li>Jika data sudah lengkap silahkan klik Selesaikan Transaksi</li>
