--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,29 +1,31 @@
-<div class="col-md-3">
-	<ul class="list group">
-		<li class="list-group-item disabled"><b>Product Category</b></li>
-		<% if @categories.any? %>
-			<% @categories.each do |category| %>
-	  			<li class="list-group-item"><%= link_to category.title, store_show_path(category) %></li>
-	  		<% end %>
-	  	<% else %>
-	  		<li class="list-group-item">No Category right now!</li>
-	  	<% end %>
-	</ul>
-</div>
-<div class="col-md-9">				
-	<h1> <%= t('.title_html')%> </h1>
-	<% cache ['store', Product.latest] do %>
-		<% @products.each do |product| %>
-			<% cache ['entry', product] do %>
-				<div class="entry">
-					<%= image_tag(product.image_url) %>
-					<h3><%= link_to product.title, product_path(product) %></h3>
-					<div class="price_line">
-						<span class="price"> Rp <%= number_with_delimiter(product.price) %> </span>
-						<%= button_to t('.add_html'), line_items_path(product_id: product), remote: true, class: "btn btn-danger" %>
+<div class="container-fluid">
+	<div class="col-md-3 col-sm-12">
+		<ul class="list group">
+			<li class="list-group-item disabled"><b>Product Category</b></li>
+			<% if @categories.any? %>
+				<% @categories.each do |category| %>
+		  			<li class="list-group-item"><%= link_to category.title, store_show_path(category) %></li>
+		  		<% end %>
+		  	<% else %>
+		  		<li class="list-group-item">No Category right now!</li>
+		  	<% end %>
+		</ul>
+	</div>
+	<div class="col-md-9 col-sm-12">				
+		<h1> <%= t('.title_html')%> </h1>
+		<% cache ['store', Product.latest] do %>
+			<% @products.each do |product| %>
+				<% cache ['entry', product] do %>
+					<div class="entry">
+						<%= image_tag(product.image_url) %>
+						<h3><%= link_to product.title, product_path(product) %></h3>
+						<div class="price_line">
+							<span class="price"> Rp <%= number_with_delimiter(product.price) %> </span>
+							<%= button_to t('.add_html'), line_items_path(product_id: product), remote: true, class: "btn btn-danger" %>
+						</div>
 					</div>
-				</div>
+				<% end %>
 			<% end %>
 		<% end %>
-	<% end %>
+	</div>
 </div>
