--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, "News") %>
-<h3>Our News</h3>
+<% provide(:title, "Informasi") %>
+<h3>Informasi Terbaru</h3>
 <div class="panel panel-default">
   <div class="panel-body">
     Tokopedia sedang ada promo gratis ongkir, gunakan kode voucher <b>GRATISONGKIR</b> sekarang juga, buruan kunjungi kami di tokopedia <%= link_to "Kunjungi Sekarang", "https://www.tokopedia.com/arjuna-batik", target: "_blank", class: "btn btn-success" %>
