--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,9 +3,13 @@
 		&copy AB OnlineShop 2017 
 	</small>
 	<ul>
-		<li> <%= link_to t('.questions'), question_path %>  </li>
+		<!-- new style without translation -->
+		<li>  <%= link_to 'Pertanyaan', question_path %> </li>
+		<li>  <%= link_to 'Berita', news_path %> </li>
+		<li>  <%= link_to 'Hubungi Kami', contact_path %> </a> </li>
+		<!-- <li> <%= link_to t('.questions'), question_path %>  </li>
 		<li> <%= link_to t('.news'), news_path %> </a> </li>
-		<li> <%= link_to t('.contact'), contact_path %> </li>
+		<li> <%= link_to t('.contact'), contact_path %> </li> -->
 	</ul>
 	<ul>
 		<li> 
