--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,15 +14,21 @@
             <ul class="nav navbar-nav">
               	<% if current_user %>
 					<% if current_user.admin? %>
-						<li> <%= link_to 'Orders', orders_path %> </li>
-						<li> <%= link_to 'Products', products_path %> </li>
-						<li> <%= link_to 'All Users', users_path %> </li>
-						<li>  <%= link_to "Category", categories_path %> </a> </li>
+						<li> <%= link_to 'Transaksi', orders_path %> </li>
+						<li> <%= link_to 'Produk', products_path %> </li>
+						<li> <%= link_to 'Pengguna', users_path %> </li>
+						<li>  <%= link_to "Kategori", categories_path %> </a> </li>
 					<% end %>			
 				<% else %>
+					<!-- new style without translation -->
+					<li>  <%= link_to 'Pertanyaan', question_path %> </li>
+					<li>  <%= link_to 'Berita', news_path %> </li>
+					<li>  <%= link_to 'Hubungi Kami', contact_path %> </a> </li>
+
+					<!-- old sytle with translation
 					<li>  <%= link_to t('.questions'), question_path %> </li>
 					<li>  <%= link_to t('.news'), news_path %> </li>
-					<li>  <%= link_to t('.contact'), contact_path %> </a> </li>
+					<li>  <%= link_to t('.contact'), contact_path %> </a> </li> -->
 				<% end %>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -32,7 +38,7 @@
 						<b>
 							<span class="glyphicon glyphicon-shopping-cart"></span>
 							<span class="label label-success" id="cart-badge">
-							<%= cart_quantity(@cart.line_items)%> item 									
+							<%= pluralize(cart_quantity(@cart.line_items), 'item')%> 									
 							</span>
 							 <span class="label label-success" id="cart-total">
 								Rp <%= number_with_delimiter(grand_total_price_with_go_jek_cost(@cart.line_items))%>
@@ -43,20 +49,20 @@
 				<% end %>
 				
 				<% if current_user %>
-					<li> <%= link_to "Profile", user_path(current_user) %> </li>	
-					<li> <%= link_to "Logout", logout_path, method: :delete %> </li>
+					<li> <%= link_to "Profil", user_path(current_user) %> </li>	
+					<li> <%= link_to "Keluar", logout_path, method: :delete %> </li>
 				<% else %>
-					<li> <%= link_to "Login", login_path %> </li>
-					<li> <%= link_to "Signup", new_user_path %> </li>
+					<li> <%= link_to "Masuk", login_path %> </li>
+					<li> <%= link_to "Daftar", new_user_path %> </li>
 				<% end %>
 				<!-- form for i18n -->
-				<li>
+				<!-- <li>
 					<%= form_tag store_path, class: 'locale' do %>
 						<%= select_tag 'set_locale', options_for_select(LANGUAGES, I18n.locale.to_s), onchange: 'this.form.submit()'%>
 						<%= submit_tag 'submit' %>
 						<%= javascript_tag "$('.locale input').hide()" %>
 					<% end %>						
-				</li>
+				</li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
@@ -72,7 +78,7 @@
 					<% end %>
 		      	</div>
 		      	<div class="modal-footer">
-		        	<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+		        	<button type="button" class="btn btn-secondary" data-dismiss="modal">Keluar</button>
 		      	</div>
 	      	</div>
 	  	</div>
