--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,7 +1,8 @@
 <div class="depot_form">
 	<div class="col-md-6 col-md-offset-3">
 		<fieldset>
-			<legend> <%= t('.legend') %> </legend>
+			<!-- <legend> <%= t('.legend') %> </legend> -->
+			<legend> Silahkan isi alamat pengiriman </legend>
 			<%= render 'form' %>
 		</fieldset>
 	</div>
