--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -21,6 +21,7 @@
 	</fieldset>
 	<% end %>
 </div> -->
+<% provide(:title, "Hubungi Kami")%>
 <div class="container">
 	<div class="jumbotron">
 		<h3 class="text-center">
