--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,17 +1,17 @@
 <%= simple_form_for(@user) do |f| %>
 
-	<%= f.input :name %>
+	<%= f.input :name, label: "Nama lengkap" %>
 
 	<%= f.input :email %>
 
-	<%= f.input :phone %>
+	<%= f.input :phone, label: "No Handphone" %>
 
 	<%= f.input :password, as: :password %>
 
-	<%= f.input :password_confirmation, as: :password %> 
+	<%= f.input :password_confirmation, as: :password, label: "Konfirmasi password" %> 
 
-	<%= f.input :gender, as: :radio_buttons, collection: ['Male','Female']%>
+	<%= f.input :gender, label: "Jenis Kelamin", as: :radio_buttons, collection: ['Laki-Laki','Perempuan']%>
 
-	<%= f.button :submit, 'Create Account',:class => "btn btn-success btn-block" %>
+	<%= f.button :submit, 'Buat Akun',:class => "btn btn-success btn-block" %>
 
 <% end %>
