--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, "Signup") %>
+<% provide(:title, "Daftar") %>
 <div class="col-md-6 col-md-offset-3">
-	<legend> Sign Up </legend>
+	<legend> Daftar Akun </legend>
 	<%= render 'form' %>
 </div>
 
