adding footer responsive menu

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,14 @@
 <footer class="footer">
+	<div class="col-md-3 col-sm-12">
 	<small>
 		&copy AB OnlineShop 2017 
 	</small>
+	</div>
+	<div class="col-md-9 col-sm-12">
 	<ul>
 		<!-- new style without translation -->
 		<li>  <%= link_to 'Pertanyaan', question_path %> </li>
-		<li>  <%= link_to 'Berita', news_path %> </li>
+		<li>  <%= link_to 'Informasi', news_path %> </li>
 		<li>  <%= link_to 'Hubungi Kami', contact_path %> </a> </li>
 		<!-- <li> <%= link_to t('.questions'), question_path %>  </li>
 		<li> <%= link_to t('.news'), news_path %> </a> </li>
@@ -22,4 +25,5 @@
 			<img src="https://pendaftaran.budiluhur.ac.id/img/thumbs/mandirilogo.jpg" class="img-rounded" alt="Mandiri" width="75" height="25">
 		</li>
 	</ul>
+	</div>
 </footer>
