--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,4 +1,5 @@
-	<h3> <%= t('.title')%> </h3>
+	<!-- <h3> <%= t('.title')%> </h3> -->
+	<h3> Keranjang Belanja Anda </h3>
 	<table class="table table-striped">
 		<%= render (@cart.line_items)%>
 		<tr>
